fixed broken css for catgories

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -72,8 +72,10 @@ input.span8, .uneditable-input.span8
 
 .idea-index
   .grid
+    .categoriesNames
+      padding-left: 5px
     .description
-      min-height: 150px
+      min-height: 140px
       padding: 5px
       span 
         display: block
